<resources>
    <string name="app_name">Recycling Starter</string>
    <string name="password">Пароль</string>
    <string name="email">e-mail</string>
    <string name="signin">Войти в систему:</string>
    <string name="signin_button">Войти</string>
    <string name="no_account"><font color='#AAAAAA'>Нет аккаунта?</font> <font color='#70BF58'>Зарегистрироваться</font></string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone">Телефон</string>
    <string name="email_big">E-mail</string>
    <string name="address">Адрес здания</string>
    <string name="office">Номер офиса</string>
    <string name="lets_register">Зарегестрироваться</string>
    <string name="register">Регистрация</string>
    <string name="already_registered"><font color='#AAAAAA'>Есть аккаунт?</font> <font color='#70BF58'>Войти</font></string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>